criação da página Perfil/alteração de fotos no sobre nós

--- a/src/app/sobre/sobre.component.html
+++ b/src/app/sobre/sobre.component.html
@@ -80,7 +80,7 @@
                     <div class="col-sm-4">
                         <!--Biografia do Edson--><!--Orientações sobre tag e atributos na bio da Laura-->
                         <div id="foto2">
-                            <img src="../../assets/image/edson.jpg" class="fotos"
+                            <img src="../../assets/image/edsonOficial.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#edson">
                             <div class="collapse mt-3"  id="edson" aria-labelledby="foto2" data-parent="#accordionGroup">
                                 <div class="collapse-text">
@@ -147,7 +147,7 @@
                     <div class="col-sm-4">
                         <!--Biografia do Wesley--><!--Orientações sobre tag e atributos na bio da Laura-->
                         <div id="foto5">
-                            <img src="../../assets/image/wesley.jpeg" class="fotos"
+                            <img src="../../assets/image/wes.jpg" class="fotos"
                                 data-toggle="collapse" data-target="#wesley">
                             <div class="collapse" id="wesley" aria-labelledby="foto5" data-parent="#accordionGroup">
                                 <div class="collapse-text mt-3">
