--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,6 +10,9 @@
         <a class="nav-link" style="color:white" [routerLink]="'/Feed'">Feed </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" style="color:white" [routerLink]="'/perfil'">Perfil</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/sobre'">Sobre Nós</a>
       </li>
       <li class="nav-item">
