Perfil: alteração nos titúlos e foto do perfil

--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -15,7 +15,7 @@
                             <div class="col-md-12 d-flex justify-content-center">
                                 <div class="card" style="width: 18rem;">
                                     <div class="card-body">
-                                        <h5 class="card-title text-center mt-2">Ana Beatriz Pires</h5>
+                                        <h5 class="card-title text-center mt-2 textoTitulo"><strong>Ana Beatriz Pires</strong></h5>
                                         <p class="card-text mt-2 text-center">Uma jovem mulher apaixonada por aprender e ensinar que encontrou na tecnologia um mundo de oportunidades, conexões e desenvolvimento.</p>
                                     </div>
                                 </div>
@@ -27,7 +27,7 @@
                                     <div class="card mt-3" style="width: 18rem;">
                                                 
                                             <div class="card-body">
-                                            <h5 class="card-title text-center mt-2 mb-2">Galeria de Troféus</h5>
+                                            <h5 class="card-title text-center mt-2 mb-2 textoTitulo"><strong>Galeria de Troféus</strong></h5>
                                         <!--icone troféu-->
                                         <div class="row">
                                             <img src="../../assets/image/chepeu.png" width="30px" class="minitrofeus">
@@ -73,7 +73,7 @@
                 <div class="col-md-6 d-flex justify-content-center">
                         <div class="card tm">
                                 <div class="card-body">
-                                  <h5 class="card-title mt-2 text-center">Sua Atividades</h5>
+                                  <h5 class="card-title mt-2 text-center textoTitulo"><strong>Suas Atividades</strong> </h5>
                                 <!--icone = Thiago -->
                                 <div class="row ml-2">
                                     <img src="../../assets/image/notesicon.png" width="50px" class="eventosSalvos">
@@ -121,7 +121,7 @@
                 <div class="col-md-6 d-flex justify-content-center">
                         <div class="card tm">
                                 <div class="card-body">
-                                  <h5 class="card-title mt-2 text-center">Seus Rolês</h5>
+                                  <h5 class="card-title mt-2 text-center textoTitulo"><strong>Seus Rolês</strong></h5>
                                   <!--icone -->
                                   <div class="row ml-2">
                                   <img src="../../assets/image/devicon.png" width="50px" class="eventosSalvos">
