--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif&display=swap');
+
 *{
     margin:0%;
     padding:0%;
@@ -10,6 +12,8 @@
     margin-left: 5%;
     margin-top: 3%;
     margin-bottom: 3%;
+    
+    border: 2px solid white;
 }
 
 #capaPerfil{
@@ -50,4 +54,9 @@ margin-bottom: 2%;
 
 .tm{
     width: 450px;
+}
+
+.textoTitulo{
+    font-family: 'Noto Serif', serif;
+    
 }
