--- a/src/app/administrador/administrador.component.html
+++ b/src/app/administrador/administrador.component.html
@@ -1,23 +1,21 @@
-<div class = "bg">
-<div class="row ">
-        <div class="col-md-12">
-                <div>
-                        <div class="card" *ngFor='let USER of listaUser'>
-                                <div class="card-header">
-                                        <h5>Usuario</h5>
-                                </div>
-                                <div class="card-body"><img
-                                                src="../../assets/image/perfil-de-avatar-de-homem-no-icone-redondo_24640-14044.jpg"
-                                                alt="">
-                                        <h5 class="card-title"></h5>
-                                        <p class="card-text"> {{USER.nome}}</p>
-                                        <a href="#" class=" btn btn-outline-purple"
-                                                [routerLink]="['/detalhe', USER.idUsuario]">Info</a>
-                                </div>
-                        </div>
-                </div>
-        </div>
-</div>
+<div class="bg">
+   <div class="row ">
+      <div class="col-md-12">
+         <div>
+            <div class="card" *ngFor='let USER of listaUser'>
+               <div class="card-header">
+                  <h5>Usuario</h5>
+               </div>
+               <div class="card-body"><img
+                     src="../../assets/image/perfil-de-avatar-de-homem-no-icone-redondo_24640-14044.jpg" alt="">
+                  <h5 class="card-title"></h5>
+                  <p class="card-text"> {{USER.nome}}</p>
+                  <a href="#" class=" btn btn-outline-purple" [routerLink]="['/detalhe', USER.idUsuario]">Info</a>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
 </div>
 
 <app-rodape></app-rodape>
