Integração front/back, login, atualização de cadastro e detalhes funcionando perfeitamente

--- a/src/app/detalhe/detalhe.component.html
+++ b/src/app/detalhe/detalhe.component.html
@@ -24,7 +24,7 @@
           </div>
         </div>
       
-      <button type="submit" class=" btn btn-outline-purple" >Enviar</button>
+      <button type="submit" class=" btn btn-outline-purple" [routerLink]="['/administrador/']" (click) = "enviarAlteracoes();">Enviar</button>
     </form>
   </div>
 </div>
