modal para editar perfil do usuário (sem o uso do banco)

--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -12,6 +12,7 @@
                 <!--Parte da descrição do perfil-->
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos facere at accusantium? Eius voluptatibus molestiae, porro voluptatem magnam eos, tenetur officiis adipisci sunt repellat iusto, consequatur odit asperiores totam minus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero enim ut autem officia? Earum fugit ulla asperiores rem similique hic sed. Laborum nam architecto necessitatibus quibusdam quis aepe impedit sint.
                 </p>
+                <button type="submit" class="btn btn-outline-purple" id="botaoPerfil" [routerLink]="'/perfil'">Meu Perfil</button>
             </div>
         </div>
     </div>
