--- a/src/app/perfil/perfil.component.css
+++ b/src/app/perfil/perfil.component.css
@@ -60,3 +60,33 @@ margin-bottom: 2%;
     font-family: 'Noto Serif', serif;
     
 }
+
+#tituloEditarPerfil{
+    font-family: 'Noto Serif', serif;
+    margin-left: 32%;
+}
+
+.btn-outline-purple{
+    border-color: #7a297a;
+    color: #7a297a;
+    background-color: transparent;
+}
+
+.btn-outline-purple:hover{
+    background-color: #7a297a;
+    color: white;
+}
+
+
+#btnEditar{
+    margin-left: 79%;
+    margin-top: 1%;
+    
+
+}
+
+.ml-80{
+    margin-left: 80px;
+}
+
+
