Alterações na pagina detalhes

--- a/src/app/administrador/administrador.component.html
+++ b/src/app/administrador/administrador.component.html
@@ -10,7 +10,7 @@
                      src="../../assets/image/perfil-de-avatar-de-homem-no-icone-redondo_24640-14044.jpg" alt="">
                   <h5 class="card-title"></h5>
                   <p class="card-text"> {{USER.nome}}</p>
-                  <a href="#" class=" btn btn-outline-purple" [routerLink]="['/detalhe/', USER.idusuario]">Info</a>
+                  <a href="#" class=" btn btn-outline-purple" [routerLink]="['/detalhe/']">Info</a>
                </div>
             </div>
          </div>
