modal editar perfil puxando informações  do bd

--- a/src/app/feed-list/feed-list.component.html
+++ b/src/app/feed-list/feed-list.component.html
@@ -38,7 +38,7 @@
             <!--Feed de noticias e alimentação com API-->
             
         <div class="card post-1 mb-3 ml-3 mr-3" *ngIf="_feed != null">
-            <!--Cabeçalho do Fedd de noticias-->
+            <!--Cabeçalho do Feed de noticias-->
             <div class="card-header"><img src="{{_feed.linkimg}}" class="profile-post" alt=""> 
                 <strong>{{usuario.nome}}</strong>
             </div>
