alterações em atributos e relacionamento postagem-usuário

--- a/src/app/editar/editar.component.html
+++ b/src/app/editar/editar.component.html
@@ -1,2 +1,4 @@
 <input  [(ngModel)]="feed.texto">
-<button type="submit" class=" btn btn-outline-purple" (click)="mudarPostagem();" [routerLink]="['/Feed']">Editar</button>
+<!--<button type="button" class=" btn btn-outline-purple" (click)="mudarPostagem()" >Editar</button>-->
+
+<button type="button" class=" btn btn-outline-purple" (click)="mudarPostagem()" [routerLink]="['/Feed']">Editar</button>
