páginas perfil/editar perfil funcionais (puxando infos do banco de dados)

--- a/src/app/ajuda/ajuda.component.html
+++ b/src/app/ajuda/ajuda.component.html
@@ -205,7 +205,7 @@
                <div class="form-group">
                   <label for="exampleFormControlTextarea1"><strong>Não encontrou o quê procurava? Mande-nos sua
                         pergunta ou sugestão!</strong></label>
-                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                  <textarea class="form-control" style="resize: none" id="exampleFormControlTextarea1" rows="5"></textarea>
 
                   <div class="btn-toolbar justify-content-end mb-5">
                      <button type="submit" class="btn btn-outline-purple mt-3">Enviar</button>
@@ -213,10 +213,6 @@
                </div>
             </div>
          </div>
-
-         <!--<div class = "col-md-4 d-flex justify-content-end p-0" id="fundo">
-        <img src="../../assets/image/fundogeo1.jpg" alt="">
-    </div>-->
       </div>
    </div>
 </div>
