--- a/src/app/administrador/administrador.component.css
+++ b/src/app/administrador/administrador.component.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif&display=swap');
+
 .card-body img{
     width: 50px;
     height: 50px;
@@ -22,4 +24,30 @@
     background-image: url(../../assets/image/fundogeo.jpg);
     background-position: right top;
     background-repeat: repeat-y;
+    height: 100%;
+}
+
+#fotoConec{
+    width: 60%;
+    height: 70%;
+}
+
+h3{
+    
+    font-family: 'Noto Serif', serif;
+    font-size: 50px;
+    color:#7a297a;
+    margin-left: 32%;
+    margin-top: 4%;
+    margin-bottom: 4%;
+
+}
+
+.valores
+{
+    width:120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-top: 3%;
+   
 }
