--- a/src/app/administrador/administrador.component.html
+++ b/src/app/administrador/administrador.component.html
@@ -1,21 +1,28 @@
 <div class="bg">
-   <div class="row ">
-      <div class="col-md-12">
-         <div>
-            <div class="card" *ngFor='let USER of listaUser'>
-               <div class="card-header">
-                  <h5>Usuario</h5>
+      <div class="container">
+            <div class="row">
+            <div class="col-md-9">
+               <div class="row">
+                  <div class="col-md-12">
+                     <h3 class="mb-5">Conexões</h3>
+                  </div>
                </div>
-               <div class="card-body"><img
-                     src="../../assets/image/perfil-de-avatar-de-homem-no-icone-redondo_24640-14044.jpg" alt="">
-                  <h5 class="card-title"></h5>
-                  <p class="card-text"> {{USER.nome}}</p>
-                  <a href="#" class=" btn btn-outline-purple" [routerLink]="['/detalhe/']">Info</a>
+               <div class="row">
+                  <div class="col-md-4" *ngFor='let USER of listaUser' >
+                     <div class="d-flex justify-content-center ">
+                           <img class ="valores" src="{{USER.foto}}"  alt="">
+                     </div>
+                     <div class="d-flex justify-content-center text-center mt-3">
+                        <p>{{USER.nome}}</p>
+                     </div>
+                  </div>
                </div>
+         
+            </div>
+            <div class="col-md-4 ">
+               
             </div>
          </div>
-      </div>
-   </div>
+         </div>
 </div>
-
 <app-rodape></app-rodape>
