--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
         <a class="nav-link" style="color:white" [routerLink]="'/contato'">Contato</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" style="color:white" [routerLink]="'/administrador'">Administrador</a>
+        <a class="nav-link" style="color:white" [routerLink]="'/administrador'">Conexões</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" style="color:white" [routerLink]="'/ajuda'">Ajuda</a>
